--- a/fuse/src/app/main/settings/academic-year/academic-year.html
+++ b/fuse/src/app/main/settings/academic-year/academic-year.html
@@ -62,7 +62,7 @@
           <td style="text-align: center">Loading...</td>
           <td></td>
         </tr>
-        <tr ng-repeat="year in vm.academicData" ng-click="vm.editYear($event, year)"
+        <tr ng-repeat="year in vm.academicData"
             ng-show="!loading"> <!-- ng-class="{ 'year-selected': year.current_sem }"-->
           <td>{{ year.display_name }}</td>
           <td>{{ year.semester }}</td>
@@ -71,9 +71,13 @@
             <!-- <i flex class="icon s20 icon-close" ng-if="year.current_sem !== 1"></i> -->
           </td>
           <td class="year-icons" ng-click="$event.preventDefault(); $event.stopPropagation();">
+            <md-icon md-font-icon="blue-600-fg icon-pencil"
+                     ng-click="vm.editYear($event, year)"
+                     class="s18"></md-icon>
+            <!--
             <md-icon md-font-icon="blue-600-fg icon-library-books"
                      ng-click="vm.viewWeakness($event, year)"
-                     class="s18"></md-icon>
+                     class="s18"></md-icon> -->
 
             <md-icon md-font-icon="red-600-fg icon-delete"
                      ng-click="vm.deleteYear($event, year)"
