login accept username

--- a/fuse/src/app/main/login/login.html
+++ b/fuse/src/app/main/login/login.html
@@ -8,8 +8,7 @@
             <form name="loginForm" novalidate>
                 <md-input-container class="md-block" md-no-float>
                     <input type="email" name="email" ng-model="vm.form.email" placeholder="Email"
-                           translate translate-attr-placeholder="LOGIN.EMAIL"
-                           ng-pattern="/^.+@.+\..+$/" required>
+                           translate translate-attr-placeholder="LOGIN.EMAIL" required>
                     <div ng-messages="loginForm.email.$error" role="alert" multiple>
                         <div ng-message="required">
                             <span translate="LOGIN.ERRORS.EMAIL_REQUIRED">Email field is required</span>
