--- a/fuse/src/app/main/login/login.html
+++ b/fuse/src/app/main/login/login.html
@@ -7,14 +7,11 @@
 
             <form name="loginForm" novalidate>
                 <md-input-container class="md-block" md-no-float>
-                    <input type="email" name="email" ng-model="vm.form.email" placeholder="Email"
+                    <input type="text" name="email" ng-model="vm.form.email" placeholder="Username"
                            translate translate-attr-placeholder="LOGIN.EMAIL" required>
                     <div ng-messages="loginForm.email.$error" role="alert" multiple>
                         <div ng-message="required">
-                            <span translate="LOGIN.ERRORS.EMAIL_REQUIRED">Email field is required</span>
-                        </div>
-                        <div ng-message="pattern">
-                            <span translate="LOGIN.ERRORS.EMAIL_MUST_VALID">Email must be a valid e-mail address</span>
+                            <span translate="LOGIN.ERRORS.EMAIL_REQUIRED">Username field is required</span>
                         </div>
                     </div>
                 </md-input-container>
