prepare search filtering
Signed-off-by: billoffice <bill.chan@ehlacademy.org>

--- a/fuse/src/app/main/pilot/choose-items/choose-items-detail/templates/select-items-levels.html
+++ b/fuse/src/app/main/pilot/choose-items/choose-items-detail/templates/select-items-levels.html
@@ -59,10 +59,6 @@
 										entries
 									</label>
 								</div>
-								<div class="dataTables_filter">
-									<label>Search:<input type="search">
-									</label>
-								</div>
 							
 								<table class="dataTable row-border hover extra-learning-table">
 									<col width="20%">
@@ -75,6 +71,8 @@
 											<div class="title">{{ item['name_en'] }}</div>
 											<div class="desc">{{ item['info_en'] }}</div>
 											<div class="desc">{{ item['info_nd_en'] }}</div>
+											<button>preview</button>
+											<button>preview article</button>
 										</td>
 										<td>
 										
