--- a/fuse/src/app/main/pilot/choose-items/choose-items-detail/choose-items-detail.scss
+++ b/fuse/src/app/main/pilot/choose-items/choose-items-detail/choose-items-detail.scss
@@ -4,3 +4,9 @@
 		.resp-hidden-tag {display:none;}
 		.resp-display-tag {display:block;}
 }
+
+
+.chosen-btn-clicked {color:red;}
+.chosen-btn {color:black;}
+.btn {width:200px;text-align:left}
+.btn-large {box-shadow:0 2px 5px 0 rgba(0, 0, 0, 0.26); color:#a7603a;margin:6px 8px; padding:6px 8px; background-color:#ffffff;}
