--- a/fuse/src/app/main/pilot/choose-items/choose-items-detail/templates/select-items.html
+++ b/fuse/src/app/main/pilot/choose-items/choose-items-detail/templates/select-items.html
@@ -38,9 +38,43 @@
 					<div class="pt-8 pb-16" layout="column" layout-align="start center">
 						<div class="orange-fg font-size-22" style="margin:10px">
 							<p>Total chosen: {{chosenItemQtt}}</p>
-							<button ng-click="confirmUpdate()" style="box-shadow:0 2px 5px 0 rgba(0, 0, 0, 0.26); color:#a7603a;margin:6px 8px; padding:6px 8px; background-color:#ffffff;">
+							<button ng-click="confirmUpdate()" class="btn-large">
 								confirm
 							</button>
+						</div>
+					</div>
+				</div>
+			</ms-widget-front>
+		</ms-widget>
+		
+		<ms-widget flippable="true" layout="column" flex="100" flex-gt-xs="100" flex-gt-md="100">
+			<ms-widget-front class="white-bg">
+				<div>
+					<div class="pt-8 pb-16" layout="column" layout-align="start center">
+						<div class="orange-fg font-size-30" style="margin:10px">
+							Search Panel 
+							<span ng-show="onShow != true" ng-click="onShow = true">+</span>
+							<span ng-show="onShow == true" ng-click="onShow = false">-</span> 
+							<button class="btn-large">Reset</button>
+							<button class="btn-large" ng-click="search()">Search</button>
+						</div>
+						
+						<div ng-show="onShow == true">
+							<div ng-repeat="sTag in searchTag">
+								<p>
+									{{sTag.key_name_en}} 
+									<span ng-show="sTag.onShow != true" ng-click="sTag.onShow = true">+</span>
+									<span ng-show="sTag.onShow == true" ng-click="sTag.onShow = false">-</span>
+								</p>
+								
+								<div ng-show="sTag.onShow == true" class="widget-group" layout="row" flex="100" layout-wrap>
+									<ms-widget ng-repeat="value in sTag.values" flippable="true" layout="column" flex="25" flex-gt-xs="20" flex-gt-md="20">
+										<ms-widget-front class="white-bg">
+											<button class="btn" ng-click='selectedTag(sTag.key, value); value.click = !value.click' ng-class="value.click ? 'chosen-btn-clicked': 'chosen-btn'" >{{value.value_name_en}}</button>											
+										</ms-widget-front>
+									</ms-widget>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -63,10 +97,6 @@
 										</select>
 										entries
 									</label>
-								</div>
-								<div class="dataTables_filter">
-									<label>Search:<input type="search">
-									</label>
 								</div>								
 							
 								<table class="dataTable row-border hover extra-learning-table">
@@ -77,6 +107,8 @@
 											<div class="title">{{ item['name_en'] }}</div>
 											<div class="desc">{{ item['info_en'] }}</div>
 											<div class="desc">{{ item['info_nd_en'] }}</div>
+											<button>preview</button>
+											<button>preview article</button>
 										</td>
 										<td>
 											<a ng-if="item.chose === false && item.tmpAdd != true" class="access-btn" ng-click="chooseItem(item.id, $index)">add to list</a>
@@ -107,10 +139,10 @@
 										
 										<a class="paginate_button current" ng-show="tab.maxPage>2 && tab.currentPage == tab.p1" ng-click="pageSelect(tab.p1)">{{tab.p1}}</a>
 										<a class="paginate_button" ng-show="tab.maxPage>2 && tab.currentPage != tab.p1" ng-click="pageSelect(tab.p1)">{{tab.p1}}</a>
-																						
+
 										<a class="paginate_button current" ng-show="tab.maxPage>3 && tab.currentPage == tab.p2" ng-click="pageSelect(tab.p2)">{{tab.p2}}</a>
 										<a class="paginate_button" ng-show="tab.maxPage>3 && tab.currentPage != tab.p2" ng-click="pageSelect(tab.p2)">{{tab.p2}}</a>
-																						
+
 										<a class="paginate_button current" ng-show="tab.p3 != -1 && tab.maxPage>4 && tab.currentPage == tab.p3" ng-click="pageSelect(tab.p3)">{{tab.p3}}</a>
 										<a class="paginate_button" ng-show="tab.p3 != -1 && tab.maxPage>4 && tab.currentPage != tab.p3" ng-click="pageSelect(tab.p3)">{{tab.p3}}</a>
 										
