refactor usermodel api logic
Signed-off-by: billoffice <bill.chan@ehlacademy.org>

--- a/fuse/src/app/main/pilot/choose-items/choose-items-detail/choose-items-detail.html
+++ b/fuse/src/app/main/pilot/choose-items/choose-items-detail/choose-items-detail.html
@@ -42,6 +42,7 @@
 								tab="tab" 
 								tabs="tabs" 
 								cat-grouper="catGrouper" 
+								total-item-qtt="totalItemQtt" 
 								chosen-item-qtt="chosenItemQtt" 
 								set-fn="setDirectiveTabOneFn(theDirFn)"></itemlist>						
 						</md-tab-body>
