level quota UI and logic

--- a/frontend/src/lib/stylus/components/_chip.styl
+++ b/frontend/src/lib/stylus/components/_chip.styl
@@ -2,10 +2,10 @@
 
 .vi-chip
   display inline-flex
-  background #f9f9f9
+  background #e9f7ff
   color $mild-grey
   line-height 1
-  font-size 16px
+  font-size 15px
   height 28px
   align-items center
   padding 0 8px
