--- a/frontend/src/lib/stylus/components/_chip.styl
+++ b/frontend/src/lib/stylus/components/_chip.styl
@@ -6,7 +6,7 @@
   color $mild-grey
   line-height 1
   font-size 14px
-  height 28px
+  min-height 28px
   align-items center
   padding 0 8px
   border-radius $border-radius
