--- a/frontend/src/lib/stylus/components/_data-table.styl
+++ b/frontend/src/lib/stylus/components/_data-table.styl
@@ -24,8 +24,8 @@ $gap = 24px
   &__row
     display flex
     background white
-    padding 10px 24px
-    // border-bottom 1px solid $border-color
+    padding 14px 24px
+    border-bottom 1px solid $border-color
 
     &--link
       cursor pointer
