--- a/frontend/src/lib/stylus/app/site.styl
+++ b/frontend/src/lib/stylus/app/site.styl
@@ -1,7 +1,9 @@
 @import '../variables.styl'
 
 html, body
-  height: 100%
+  // this breaks many things
+  // infinite scroll is broken, menu position is wrong...
+  // height: 100%
   min-height: 100%
   position: relative
   width: 100%
