fix dropdown menu being covered in 2 places

--- a/frontend/src/lib/stylus/app/site.styl
+++ b/frontend/src/lib/stylus/app/site.styl
@@ -19,6 +19,7 @@ html
 body
   font-family: $font-family
   line-height: $line-height-root
+  min-height 100%
 
 header
   transition: .3s padding $transition
