assessment list view 80% done - modified vi-datatable to allow search key, also fixed column width bug

--- a/frontend/src/lib/stylus/components/_data-table.styl
+++ b/frontend/src/lib/stylus/components/_data-table.styl
@@ -38,6 +38,7 @@ $gap = 24px
     display flex
     align-items center
     justify-content center
+    line-height 1.2
 
     +not-last()
       margin-right $gap
