--- a/frontend/src/project-ui/stylus/variables.styl
+++ b/frontend/src/project-ui/stylus/variables.styl
@@ -1,20 +1,20 @@
 /* font */
-$page-font := Lato, sans-serif
+$page-font = Lato, sans-serif
 
-$header-font := Lato, sans-serif
+$header-font = Lato, sans-serif
 
-$page-font-root := 1.556
+$page-font-root = 1.5
 
-$font-size-root := 16px
+$font-size-root = 14px
 
 /* breakpoints */
-$screen-lg := 954px
+$screen-lg = 954px
 
-$screen-md := 800px
+$screen-md = 800px
 
-$screen-sm := 600px
+$screen-sm = 600px
 
-$breakpoints := {
+$breakpoints = {
   xs: 0
   sm: $screen-sm
   md: $screen-md
@@ -22,26 +22,26 @@ $breakpoints := {
 }
 
 /* shadow and radius */
-$transition := 0.3s cubic-bezier(.25,.8,.50,1)
+$transition = 0.3s cubic-bezier(.25,.8,.50,1)
 
-$box-shadow-1 := 0 4px 20px -4px rgba(0,0,0,.15)
+$box-shadow-1 = 0 4px 20px -4px rgba(0,0,0,.15)
 
-$box-shadow-2 := 0 4px 20px -4px rgba(0,0,0,.25)
+$box-shadow-2 = 0 4px 20px -4px rgba(0,0,0,.25)
 
-$box-shadow-3 := 0 4px 20px -4px rgba(0,0,0,.35)
+$box-shadow-3 = 0 4px 20px -4px rgba(0,0,0,.35)
 
-$box-shadow := $box-shadow-2
+$box-shadow = $box-shadow-2
 
-$border-radius := 6px
+$border-radius = 6px
 
 /* element size */
-$el-padding-x := 10px
+$el-padding-x = 10px
 
-$el-height-1 := 30px
+$el-height-1 = 30px
 
-$el-height-2 := 40px
+$el-height-2 = 40px
 
-$el-height-3 := 50px
+$el-height-3 = 50px
 
-$el-height := $el-height-2
+$el-height = $el-height-2
 
