--- a/frontend/src/ehla-ui/components/vi-input/input.styl
+++ b/frontend/src/ehla-ui/components/vi-input/input.styl
@@ -116,6 +116,10 @@ $input-dark-border-color-hover := $border-color-3
     textarea
       resize none
 
+  &--minimal
+    padding 0
+    border none
+
   &__inner
     display block
     resize vertical
