--- a/frontend/src/ehla-ui/components/vi-dialog/_dialog.styl
+++ b/frontend/src/ehla-ui/components/vi-dialog/_dialog.styl
@@ -1,4 +1,4 @@
-.v-dialog
+.vi-dialog
   box-shadow $box-shadow-2
   border-radius: $border-radius
   margin: 60px 24px
@@ -52,21 +52,41 @@
       margin 0 !important
       padding 0 !important
 
+  &__header
+    display flex
+    align-items center
+    padding 0 16px
+    background $brand
+    color white
+    min-height 48px
+    font-weight bold
+    font-size 16px
+
+  &__footer
+    border-top 1px solid $border-color
+    display flex
+    align-items center
+    justify-content center
+    min-height 40px
+
+  &__body
+    padding 24px
+
   &--scrollable
     display: flex
 
-    > .v-card
+    .vi-dialog__main
       display: flex
       flex: 1 1 auto
       flex-direction: column
 
-      > .v-card__title
-      > .v-card__actions
-        flex: 1 0 auto
+    .vi-dialog__header, .vi-dialog__footer
+      flex: 0 0 40px
 
-      > .v-card__text
-        overflow-y: auto
-        backface-visibility: hidden
+    .vi-dialog__body
+      flex 1 0 auto
+      overflow-y auto
+      height 100%
 
 .vi-dialog
   &__title
