--- a/frontend/src/project-ui/stylus/colors.styl
+++ b/frontend/src/project-ui/stylus/colors.styl
@@ -24,7 +24,7 @@ $success-color = $green
 $disable-bg-color = #e5e5e5
 
 /* background color */
-$bg-color-1 = #eff5f9
+$bg-color-1 = #f4fbff
 
 $bg-color-2 = #eff5f9
 
