--- a/frontend/src/ehla-ui/components/vi-grid/_grid.styl
+++ b/frontend/src/ehla-ui/components/vi-grid/_grid.styl
@@ -36,6 +36,12 @@
   &--has-col
     margin -8px
 
+  &.minimal
+    margin 0
+
+    > .vi-col
+      padding 0
+
   > .vi-col
     flex 1 1 auto
     padding 8px
