--- a/frontend/src/ehla-ui/components/vi-no-data/no-data.styl
+++ b/frontend/src/ehla-ui/components/vi-no-data/no-data.styl
@@ -1,8 +1,8 @@
 @import '../../stylus/settings.styl'
 
 .vi-no-data
-  display inline-block
-  margin 0 auto
+  display block
+  margin 32px auto 0
   color $font-color-1
   line-height 1.2
   text-align center
