--- a/frontend/src/ehla-ui/components/vi-data-table/data-table.styl
+++ b/frontend/src/ehla-ui/components/vi-data-table/data-table.styl
@@ -51,6 +51,10 @@ $gap = 24px
       &:hover
         box-shadow $box-shadow
 
+    &--disabled
+      pointer-events none
+      opacity 0.3
+
   &__col
     display flex
     align-items center
