--- a/frontend/src/ehla-ui/components/vi-checkbox/checkbox.styl
+++ b/frontend/src/ehla-ui/components/vi-checkbox/checkbox.styl
@@ -1,11 +1,10 @@
 @import '../../stylus/settings.styl'
 
 .vi-checkbox
-  display block
+  display flex
   user-select none
   font-size 14px
-  height 18px
-  width 18px
+  align-items center
 
   &--inline
     display inline
@@ -31,5 +30,6 @@
     margin-left 8px
 
   &__icon
+    flex-shrink 0
     width 18px
     height @width
