--- a/frontend/src/ehla-ui/components/vi-checkbox/checkbox.styl
+++ b/frontend/src/ehla-ui/components/vi-checkbox/checkbox.styl
@@ -5,6 +5,7 @@
   user-select none
   font-size 14px
   align-items center
+  margin 8px 0
 
   &--inline
     display inline
@@ -28,6 +29,7 @@
 
   &__label
     margin-left 8px
+    line-height 1.2
 
   &__icon
     flex-shrink 0
