--- a/frontend/src/project-ui/stylus/colors.styl
+++ b/frontend/src/project-ui/stylus/colors.styl
@@ -53,3 +53,6 @@ $font-color-3 = #39312f // default font color
 $font-color-4 = #39312f // darkest font color
 
 $font-color = $font-color-3
+
+/* other color */
+$pale-yellow = #f1f1ce
