assign exercise to individual

--- a/frontend/src/ehla-ui/components/vi-checkbox/checkbox.styl
+++ b/frontend/src/ehla-ui/components/vi-checkbox/checkbox.styl
@@ -19,6 +19,9 @@
   &--active
     color $brand
 
+    .vi-checkbox__icon
+      color inherit
+
   &__main
     cursor pointer
     display inline-flex
