--- a/frontend/src/ehla-ui/components/vi-item/item.styl
+++ b/frontend/src/ehla-ui/components/vi-item/item.styl
@@ -113,6 +113,7 @@ $item-link-bg := $bg-color
     ~ .vi-item__action
       justify-content: flex-end
       padding-right 0
+      margin-left 16px
 
 .vi-item-divider
   background $border-color
